--- a/bloglist-frontend/package.json
+++ b/bloglist-frontend/package.json
@@ -24,12 +24,14 @@
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.3",
     "eslint": "^8.0.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-react": "^7.35.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "eslint-plugin-vitest-globals": "^1.5.0",
     "globals": "^15.8.0",
     "jsdom": "^24.1.1",
+    "prettier": "3.3.3",
     "vite": "^4.4.5",
     "vitest": "^2.0.4"
   }
