--- a/bloglist-frontend/package.json
+++ b/bloglist-frontend/package.json
@@ -11,12 +11,16 @@
     "test": "vitest run"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/material": "^6.0.1",
     "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.4.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.2",
+    "react-router-dom": "^6.26.1",
     "redux": "^5.0.1"
   },
   "devDependencies": {
