--- a/bloglist-query/package.json
+++ b/bloglist-query/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.13.0",
     "@mui/material": "^6.0.1",
     "@reduxjs/toolkit": "^2.2.7",
+    "@tanstack/react-query": "^5.54.1",
     "axios": "^1.4.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
